--- a/app/src/main/res/layout/activity_sub_category.xml
+++ b/app/src/main/res/layout/activity_sub_category.xml
@@ -7,7 +7,7 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout_1"
         android:layout_width="match_parent"
-        android:layout_height="100dp" />
+        android:layout_height="wrap_content" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
