--- a/app/src/main/res/layout/activity_sub_category.xml
+++ b/app/src/main/res/layout/activity_sub_category.xml
@@ -2,12 +2,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="15dp">
+    >
+
+    <include layout="@layout/app_bar"/>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout_1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
