--- a/app/src/main/res/layout/new_row.xml
+++ b/app/src/main/res/layout/new_row.xml
@@ -1,23 +1,23 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="310dp"
     android:orientation="vertical"
-    android:weightSum="10"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:id="@+id/view_1">
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="8"
+        android:layout_height="250dp"
         android:id="@+id/image_view_2"/>
 
     <TextView
-        android:layout_weight="2"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         style="@style/text_view_style"
+        android:layout_below="@+id/image_view_2"
+        android:gravity="center"
         android:id="@+id/text_view_1"/>
 
 
 
-</LinearLayout>
+</RelativeLayout>
