--- a/app/src/main/res/layout/new_row_cart.xml
+++ b/app/src/main/res/layout/new_row_cart.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_2"
     android:layout_width="match_parent"
@@ -10,10 +11,6 @@
         android:layout_width="100dp"
         android:layout_height="100dp" />
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
     <View
         android:layout_width="match_parent"
@@ -63,53 +60,20 @@
         android:layout_toRightOf="@+id/text_view_3"
         android:textSize="15dp" />
 
-    <Button
-        android:id="@+id/button_1"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="22.5dp"
-        android:background="@drawable/round_button"
-        android:text="+"
-        android:textColor="#fff"
-        android:textSize="30dp" />
 
-    <Button
-        android:id="@+id/button_2"
-        android:layout_width="22.5dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="50dp"
-        android:layout_toLeftOf="@+id/text_view_5"
-        android:background="@drawable/lefthalf_round_button"
-        android:gravity="center"
-        android:text="-"
-        android:textColor="#000"
-        android:textSize="30dp" />
 
     <TextView
         android:id="@+id/text_view_5"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginTop="50dp"
-        android:layout_marginRight="22.5dp"
+        android:layout_marginRight="45dp"
         android:gravity="center"
-        android:text="0"
+        android:text="1"
         android:textColor="#000"
-        android:textSize="30dp" />
+        android:textSize="20dp" />
 
-    <Button
-        android:id="@+id/button_3"
-        android:layout_width="22.5dp"
-        android:layout_height="45dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="50dp"
-        android:background="@drawable/righthalf_round_button"
-        android:gravity="center"
-        android:text="+"
-        android:textColor="#000"
-        android:textSize="30dp" />
 
 
 </RelativeLayout>
