--- a/app/src/main/res/layout/new_row_cart.xml
+++ b/app/src/main/res/layout/new_row_cart.xml
@@ -38,42 +38,37 @@
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@+id/image_view_1"
         android:textSize="15dp"
-        android:textStyle="italic" />
-
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/text_view_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/text_view_2"
+        android:layout_alignBaseline="@+id/text_view_2"
         android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/image_view_1"
-        android:textSize="15dp"
-        android:textStyle="bold" />
+        android:layout_toRightOf="@+id/text_view_2"
+        android:textSize="15dp" />
+
 
     <TextView
         android:id="@+id/text_view_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/text_view_3"
-        android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/text_view_3"
-        android:textSize="15dp" />
-
-
-
-    <TextView
-        android:id="@+id/text_view_5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_below="@+id/button_remove"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="45dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="50dp"
         android:gravity="center"
         android:text="1"
         android:textColor="#000"
         android:textSize="20dp" />
 
+    <Button
+        android:id="@+id/button_remove"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:text="@string/button_remove"/>
 
 
 </RelativeLayout>
