--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -1,19 +1,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_weight="10"
+    android:background="@drawable/bg">
 
     <include layout="@layout/app_bar" />
 
     <ImageView
         android:id="@+id/image_view_1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="0dp"
+        android:layout_weight="2"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_1"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="8"/>
+
 
 
 </LinearLayout>
