--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -2,7 +2,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="20">
+    android:weightSum="20"
+    android:background="@drawable/bg">
 
     <include layout="@layout/app_bar" />
 
@@ -10,8 +11,10 @@
     <ImageView
         android:id="@+id/image_view_3"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_weight="6" />
+        android:layout_height="0dp"
+        android:layout_weight="6"
+        />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,19 +42,21 @@
             android:gravity="center" />
     </LinearLayout>
 
+
     <TextView
         android:id="@+id/text_view_3"
         style="@style/text_view_style"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="10dp"
-        android:layout_weight="1"
+        android:layout_weight="1.5"
         android:textStyle="bold" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="11">
+        android:layout_weight="8.5"
+        android:layout_marginTop="15dp">
 
         <TextView
             android:id="@+id/text_view_4"
@@ -63,8 +68,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:layout_marginTop="10dp"
         >
 
 
@@ -83,7 +89,7 @@
             android:layout_width="22.5dp"
             android:layout_height="45dp"
             android:background="@drawable/lefthalf_round_button"
-            android:layout_marginLeft="57.5dp"
+            android:layout_marginLeft="47.5dp"
             android:gravity="center"
             android:text="-"
             android:textColor="#000"
@@ -91,7 +97,7 @@
 
         <TextView
             android:id="@+id/text_view_quantity"
-            android:layout_width="45dp"
+            android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:gravity="center"
             android:layout_marginLeft="80dp"
@@ -104,6 +110,7 @@
             android:layout_width="22.5dp"
             android:layout_height="45dp"
             android:layout_toRightOf="@+id/text_view_quantity"
+            android:layout_marginLeft="10dp"
             android:background="@drawable/righthalf_round_button"
             android:gravity="center"
             android:text="+"
