--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -4,6 +4,6 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimaryDark"
+    android:background="#0d89c5"
     android:theme="@style/Platform.MaterialComponents"
-    app:titleTextColor="@color/colorAccent" />
+    app:titleTextColor="#fff" />
