--- a/app/src/main/res/layout/new_row.xml
+++ b/app/src/main/res/layout/new_row.xml
@@ -1,13 +1,23 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="310dp"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="15dp"
+    app:cardElevation="5dp"
+    app:cardMaxElevation="10dp"
+    app:cardPreventCornerOverlap="true"
+    android:background="#C8DBEB"
+    android:layout_margin="10dp">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="200dp"
     android:orientation="vertical"
     android:padding="10dp"
     android:id="@+id/view_1">
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="140dp"
         android:id="@+id/image_view_2"/>
 
     <TextView
@@ -16,8 +26,14 @@
         style="@style/text_view_style"
         android:layout_below="@+id/image_view_2"
         android:gravity="center"
-        android:id="@+id/text_view_1"/>
-
+        android:id="@+id/text_view_1"
+        />
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:id="@+id/progress_bar"/>
 
 
 </RelativeLayout>
+</androidx.cardview.widget.CardView>
