--- a/app/src/main/res/layout/new_row_cart.xml
+++ b/app/src/main/res/layout/new_row_cart.xml
@@ -5,17 +5,28 @@
     android:layout_height="wrap_content"
     android:padding="5dp">
 
+    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="#C8DBEB"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="5dp"
+        app:cardMaxElevation="10dp"
+        app:cardPreventCornerOverlap="true">
 
-    <ImageView
-        android:id="@+id/image_view_1"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+        <ImageView
+            android:id="@+id/image_view_1"
+            android:layout_width="100dp"
+            android:layout_height="100dp" />
+    </androidx.cardview.widget.CardView>
 
 
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_below="@+id/image_view_1"
+        android:layout_below="@+id/card_view_1"
         android:layout_marginTop="2dp"
         android:background="#000" />
 
@@ -25,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="15dp"
-        android:layout_toRightOf="@+id/image_view_1"
+        android:layout_toRightOf="@+id/card_view_1"
         android:textSize="15dp"
         android:textStyle="bold" />
 
@@ -36,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_view_1"
         android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/image_view_1"
+        android:layout_toRightOf="@+id/card_view_1"
         android:textSize="15dp"
         android:textStyle="bold" />
 
@@ -53,10 +64,10 @@
     <TextView
         android:id="@+id/text_view_4"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_below="@+id/button_remove"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="50dp"
         android:gravity="center"
         android:text="1"
@@ -64,11 +75,36 @@
         android:textSize="20dp" />
 
     <Button
-        android:id="@+id/button_remove"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/button_minus"
+        android:layout_width="22.5dp"
+        android:layout_height="45dp"
+        android:layout_below="@+id/button_remove"
         android:layout_alignParentRight="true"
-        android:text="@string/button_remove"/>
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="80dp"
+        android:background="@drawable/lefthalf_round_button"
+        android:text="-"
+        android:textSize="30dp" />
+
+    <Button
+        android:id="@+id/button_add"
+        android:layout_width="22.5dp"
+        android:layout_height="45dp"
+        android:layout_below="@+id/button_remove"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/righthalf_round_button"
+        android:text="+"
+        android:textSize="30dp" />
+
+    <Button
+        android:id="@+id/button_remove"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/delete_button" />
 
 
 </RelativeLayout>
