--- a/app/src/main/res/layout/new_row_fragment.xml
+++ b/app/src/main/res/layout/new_row_fragment.xml
@@ -1,14 +1,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_2"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="5dp">
+    android:layout_height="wrap_content">
 
+    <androidx.cardview.widget.CardView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="#C8DBEB"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="5dp"
+        app:cardMaxElevation="10dp"
+        app:cardPreventCornerOverlap="true"
+        android:id="@+id/card_view_1">
 
-    <ImageView
-        android:id="@+id/image_view_1"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+        <ImageView
+            android:id="@+id/image_view_1"
+            android:layout_width="100dp"
+            android:layout_height="100dp" />
+    </androidx.cardview.widget.CardView>
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -18,7 +29,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_below="@+id/image_view_1"
+        android:layout_below="@+id/card_view_1"
         android:layout_marginTop="2dp"
         android:background="#000" />
 
@@ -28,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="15dp"
-        android:layout_toRightOf="@+id/image_view_1"
+        android:layout_toRightOf="@+id/card_view_1"
         android:textSize="15dp"
         android:textStyle="bold" />
 
@@ -39,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_view_1"
         android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/image_view_1"
+        android:layout_toRightOf="@+id/card_view_1"
         android:textSize="15dp"
         android:textStyle="italic" />
 
@@ -50,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_view_2"
         android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/image_view_1"
+        android:layout_toRightOf="@+id/card_view_1"
         android:textSize="15dp"
         android:textStyle="bold" />
 
@@ -80,6 +91,7 @@
         android:layout_width="22.5dp"
         android:layout_height="45dp"
         android:layout_marginTop="50dp"
+        android:layout_marginRight="10dp"
         android:layout_toLeftOf="@+id/text_view_5"
         android:background="@drawable/lefthalf_round_button"
         android:gravity="center"
@@ -89,15 +101,15 @@
 
     <TextView
         android:id="@+id/text_view_5"
-        android:layout_width="45dp"
+        android:layout_width="wrap_content"
         android:layout_height="45dp"
         android:layout_alignParentRight="true"
         android:layout_marginTop="50dp"
-        android:layout_marginRight="22.5dp"
+        android:layout_marginRight="30dp"
         android:gravity="center"
         android:text="0"
         android:textColor="#000"
-        android:textSize="30dp" />
+        android:textSize="20dp" />
 
     <Button
         android:id="@+id/button_3"
@@ -113,3 +125,4 @@
 
 
 </RelativeLayout>
+
