--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,8 +7,16 @@
 
     <include layout="@layout/app_bar" />
 
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/bg"
+        android:src="@drawable/pic6" />
 
     <EditText
+        android:padding="5dp"
         android:id="@+id/edit_text_1"
         style="@style/edit_text"
         android:layout_width="match_parent"
@@ -17,6 +25,7 @@
         android:hint="@string/email" />
 
     <EditText
+        android:padding="5dp"
         android:id="@+id/edit_text_2"
         style="@style/edit_text"
         android:layout_width="match_parent"
@@ -27,11 +36,13 @@
 
 
     <Button
+        android:layout_margin="15dp"
         android:id="@+id/button_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-        android:text="Login" />
+        android:padding="5dp"
+        android:text="Login"
+        android:background="@android:color/white"/>
 
     <TextView
         android:id="@+id/text_view_1"
@@ -39,14 +50,6 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/to_register" />
-
-    <ImageView
-        android:layout_marginTop="40dp"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center"
-        android:background="@drawable/bg"
-        android:src="@drawable/pic6"/>
 
 
 </LinearLayout>
